# DynamicEditor

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: design.md  implementation.md  preparation.md
src/: App.cpp  COWRef.h  Clipboard.h  Descriptor.h  DescriptorAny.h  DescriptorRegistry.h  History.cpp  History.h  Item.cpp  Item.h  ItemBlock.h  ItemBlockCache.h  ItemBlockRef.h  ItemPtr.h  ItemRef.h  ItemType.h  LazyLoadFrame.h  MainWindow.cpp  MainWindow.h  Meta.h  RefOrOwner.h  String.h  StringRef.h  StringTable.h  TabView.h  item_block_ref.h  main.cpp
src/utility/: cow_ref.h
